--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,15 +6,16 @@ services:
       dockerfile: jenkins.Dockerfile
     container_name: jenkins
     restart: always
+    privileged: true
     volumes:
       - /opt/jenkins_home/:/var/jenkins_home/
     ports:
-      - "8080:8080"
+      - "8280:8080"
     networks:
       devops:
         aliases:
           - jenkins
-  gitlab:
+  gitlab-ce:
     image: gitlab/gitlab-ce:latest
     restart: always
     container_name: gitlab-ce
