--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,32 @@
 version: '3.8'
 services:
+  jenkins-docker:
+        image: docker:18.09-dind
+        restart: always
+        privileged: true
+        ports:
+             - 2375:2375
+        container_name: jenkins-docker
+        volumes:
+            - /opt/jenkins_home:/var/jenkins_home
+        networks: 
+            devops:
+                aliases:
+                    - docker
   jenkins:
-    build:
-      context: jenkins/
-      dockerfile: jenkins.Dockerfile
+    image: jenkinsci/blueocean
     container_name: jenkins
     restart: always
     privileged: true
+    user: root
+    depends_on:
+      - jenkins-docker
     volumes:
-      - /opt/jenkins_home/:/var/jenkins_home/
+      - /opt/jenkins_home:/var/jenkins_home/
     ports:
       - "8280:8080"
+    environment:
+            - DOCKER_HOST=tcp://docker:2375
     networks:
       devops:
         aliases:
