--- a/jenkins.yml
+++ b/jenkins.yml
@@ -18,10 +18,11 @@ services:
     container_name: jenkins
     restart: always
     privileged: true
+    user: root
     depends_on:
       - jenkins-docker
     volumes:
-      - /opt/jenkinss_home:/var/jenkins_home/
+      - /opt/jenkins_home:/var/jenkins_home/
     ports:
       - "8280:8080"
     environment:
